// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: Button should default to standard variant 1`] = `
<DocumentFragment>
  .c0 {
  position: relative;
  border-radius: 20px;
  padding: 2px 30px;
  border: 2px solid;
  outline: none;
  cursor: pointer;
  box-sizing: border-box;
  font-size: 18px;
  line-height: 28px;
  color: hsl(200,96%,11%);
  background-color: hsl(0,0%,100%);
  border-color: hsl(200,96%,11%);
}

.c0::-moz-focus-inner {
  border: 0;
}

.c0:focus::after {
  content: '';
  display: block;
  position: absolute;
  height: calc(100% + 10px);
  width: calc(100% + 10px);
  top: -5px;
  left: -5px;
  border: 2px solid hsl(200,96%,35%);
  border-radius: 20px;
  box-sizing: border-box;
}

.c0 svg {
  display: inline-block;
  margin-top: -4px;
}

.c0 .c1 {
  position: absolute;
  left: 50%;
  top: 50%;
  margin-left: -12px;
  margin-top: -12px;
}

.c0:hover {
  color: hsl(0,0%,100%);
  background-color: hsl(200,96%,11%);
  border-color: hsl(200,96%,11%);
}

<button
    aria-live="assertive"
    class="c0"
    type="button"
  >
    <span>
      Click me!
    </span>
  </button>
</DocumentFragment>
`;

exports[`component: Button should render Spinner when loading is true 1`] = `
<DocumentFragment>
  .c2 {
  vertical-align: middle;
  font-size: 24px;
  -webkit-animation: iVXCSc 0.75s linear infinite;
  animation: iVXCSc 0.75s linear infinite;
}

.c0 {
  position: relative;
  border-radius: 20px;
  padding: 2px 30px;
  border: 2px solid;
  outline: none;
  cursor: pointer;
  box-sizing: border-box;
  font-size: 18px;
  line-height: 28px;
  color: hsl(200,96%,11%);
  background-color: hsl(0,0%,100%);
  border-color: hsl(200,96%,11%);
}

.c0::-moz-focus-inner {
  border: 0;
}

.c0:focus::after {
  content: '';
  display: block;
  position: absolute;
  height: calc(100% + 10px);
  width: calc(100% + 10px);
  top: -5px;
  left: -5px;
  border: 2px solid hsl(200,96%,35%);
  border-radius: 20px;
  box-sizing: border-box;
}

.c0 svg {
  display: inline-block;
  margin-top: -4px;
}

.c0 .c1 {
  position: absolute;
  left: 50%;
  top: 50%;
  margin-left: -12px;
  margin-top: -12px;
}

.c0:hover {
  color: hsl(0,0%,100%);
  background-color: hsl(200,96%,11%);
  border-color: hsl(200,96%,11%);
}

.c3 .c1 {
  position: absolute;
  left: 50%;
  top: 50%;
  margin-left: -12px;
  margin-top: -12px;
}

.c4 .c1 {
  position: absolute;
  left: 50%;
  top: 50%;
  margin-left: -12px;
  margin-top: -12px;
}

.c5 .c1 {
  position: absolute;
  left: 50%;
  top: 50%;
  margin-left: -12px;
  margin-top: -12px;
}

.c6 .c1 {
  position: absolute;
  left: 50%;
  top: 50%;
  margin-left: -12px;
  margin-top: -12px;
}

.c7 .c1 {
  position: absolute;
  left: 50%;
  top: 50%;
  margin-left: -12px;
  margin-top: -12px;
}

<button
    aria-live="assertive"
    class="c0"
    disabled=""
    type="button"
  >
    <span
      aria-hidden="true"
      style="visibility: hidden;"
    >
      Submit
    </span>
    <svg
      aria-label="loading"
      class="c1 c2"
      fill="currentcolor"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M12,21 L12,19 C15.8659932,19 19,15.8659932 19,12 C19,8.18945141 15.9516404,5.08074727 12.1490172,5.00155029 C12.074648,5.00025934 12.0497425,5 12,5 C8.13400675,5 5,8.13400675 5,12 L3,12 C3,7.02943725 7.02943725,3 12,3 C12.0636257,3 12.0954736,3.00033163 12.1906621,3.00198391 C17.0808462,3.10383145 21,7.10056778 21,12 C21,16.9705627 16.9705627,21 12,21 Z"
      />
    </svg>
  </button>
</DocumentFragment>
`;

exports[`component: Button should render call to action variant 1`] = `
<DocumentFragment>
  .c0 {
  position: relative;
  border-radius: 20px;
  padding: 2px 30px;
  border: 2px solid;
  outline: none;
  cursor: pointer;
  box-sizing: border-box;
  font-size: 18px;
  line-height: 28px;
  color: hsl(0,0%,100%);
  background-color: hsl(200,96%,35%);
  border-color: hsl(200,96%,35%);
}

.c0::-moz-focus-inner {
  border: 0;
}

.c0:focus::after {
  content: '';
  display: block;
  position: absolute;
  height: calc(100% + 10px);
  width: calc(100% + 10px);
  top: -5px;
  left: -5px;
  border: 2px solid hsl(200,96%,35%);
  border-radius: 20px;
  box-sizing: border-box;
}

.c0 svg {
  display: inline-block;
  margin-top: -4px;
}

.c0 .c1 {
  position: absolute;
  left: 50%;
  top: 50%;
  margin-left: -12px;
  margin-top: -12px;
}

.c0:hover {
  color: hsl(0,0%,100%);
  background-color: hsl(200,96%,11%);
  border-color: hsl(200,96%,11%);
}

<button
    aria-live="assertive"
    class="c0"
    type="button"
  >
    <span>
      Click me!
    </span>
  </button>
</DocumentFragment>
`;

exports[`component: Button should render disabled variant 1`] = `
<DocumentFragment>
  .c0 {
  position: relative;
  border-radius: 20px;
  padding: 2px 30px;
  border: 2px solid;
  outline: none;
  cursor: pointer;
  box-sizing: border-box;
  font-size: 18px;
  line-height: 28px;
  color: hsl(0,0%,70%);
  background-color: hsl(0,0%,90%);
  border-color: hsl(0,0%,90%);
  cursor: not-allowed;
}

.c0::-moz-focus-inner {
  border: 0;
}

.c0:focus::after {
  content: '';
  display: block;
  position: absolute;
  height: calc(100% + 10px);
  width: calc(100% + 10px);
  top: -5px;
  left: -5px;
  border: 2px solid hsl(200,96%,35%);
  border-radius: 20px;
  box-sizing: border-box;
}

.c0 svg {
  display: inline-block;
  margin-top: -4px;
}

.c0 .c1 {
  position: absolute;
  left: 50%;
  top: 50%;
  margin-left: -12px;
  margin-top: -12px;
}

<button
    aria-live="assertive"
    class="c0"
    disabled=""
    type="button"
  >
    <span>
      Click me!
    </span>
  </button>
</DocumentFragment>
`;

exports[`component: Button should render inverse call to action variant 1`] = `
<DocumentFragment>
  .c0 {
  position: relative;
  border-radius: 20px;
  padding: 2px 30px;
  border: 2px solid;
  outline: none;
  cursor: pointer;
  box-sizing: border-box;
  font-size: 18px;
  line-height: 28px;
  color: hsl(0,0%,100%);
  background-color: hsl(200,96%,35%);
  border-color: hsl(200,96%,35%);
}

.c0::-moz-focus-inner {
  border: 0;
}

.c0:focus::after {
  content: '';
  display: block;
  position: absolute;
  height: calc(100% + 10px);
  width: calc(100% + 10px);
  top: -5px;
  left: -5px;
  border: 2px solid hsl(200,96%,35%);
  border-radius: 20px;
  box-sizing: border-box;
}

.c0 svg {
  display: inline-block;
  margin-top: -4px;
}

.c0 .c1 {
  position: absolute;
  left: 50%;
  top: 50%;
  margin-left: -12px;
  margin-top: -12px;
}

.c0:hover {
  color: hsl(200,96%,35%);
  background-color: hsl(0,0%,100%);
  border-color: hsl(0,0%,100%);
}

<button
    aria-live="assertive"
    class="c0"
    type="button"
  >
    <span>
      Click me!
    </span>
  </button>
</DocumentFragment>
`;

exports[`component: Button should render inverse disabled variant 1`] = `
<DocumentFragment>
  .c0 {
  position: relative;
  border-radius: 20px;
  padding: 2px 30px;
  border: 2px solid;
  outline: none;
  cursor: pointer;
  box-sizing: border-box;
  font-size: 18px;
  line-height: 28px;
  color: hsl(0,0%,70%);
  background-color: hsl(0,0%,90%);
  border-color: hsl(0,0%,90%);
  cursor: not-allowed;
}

.c0::-moz-focus-inner {
  border: 0;
}

.c0:focus::after {
  content: '';
  display: block;
  position: absolute;
  height: calc(100% + 10px);
  width: calc(100% + 10px);
  top: -5px;
  left: -5px;
  border: 2px solid hsl(200,96%,35%);
  border-radius: 20px;
  box-sizing: border-box;
}

.c0 svg {
  display: inline-block;
  margin-top: -4px;
}

.c0 .c1 {
  position: absolute;
  left: 50%;
  top: 50%;
  margin-left: -12px;
  margin-top: -12px;
}

<button
    aria-live="assertive"
    class="c0"
    disabled=""
    type="button"
  >
    <span>
      }&gt;Click me!
    </span>
  </button>
</DocumentFragment>
`;

exports[`component: Button should render inverse standard variant 1`] = `
<DocumentFragment>
  .c0 {
  position: relative;
  border-radius: 20px;
  padding: 2px 30px;
  border: 2px solid;
  outline: none;
  cursor: pointer;
  box-sizing: border-box;
  font-size: 18px;
  line-height: 28px;
  color: hsl(0,0%,100%);
  background-color: hsl(200,96%,11%);
  border-color: hsl(0,0%,100%);
}

.c0::-moz-focus-inner {
  border: 0;
}

.c0:focus::after {
  content: '';
  display: block;
  position: absolute;
  height: calc(100% + 10px);
  width: calc(100% + 10px);
  top: -5px;
  left: -5px;
  border: 2px solid hsl(200,96%,35%);
  border-radius: 20px;
  box-sizing: border-box;
}

.c0 svg {
  display: inline-block;
  margin-top: -4px;
}

.c0 .c1 {
  position: absolute;
  left: 50%;
  top: 50%;
  margin-left: -12px;
  margin-top: -12px;
}

.c0:hover {
  color: hsl(200,96%,11%);
  background-color: hsl(0,0%,100%);
  border-color: hsl(0,0%,100%);
}

<button
    aria-live="assertive"
    class="c0"
    type="button"
  >
    <span>
      Click me!
    </span>
  </button>
</DocumentFragment>
`;

exports[`component: Button should render standard variant 1`] = `
<DocumentFragment>
  .c0 {
  position: relative;
  border-radius: 20px;
  padding: 2px 30px;
  border: 2px solid;
  outline: none;
  cursor: pointer;
  box-sizing: border-box;
  font-size: 18px;
  line-height: 28px;
  color: hsl(200,96%,11%);
  background-color: hsl(0,0%,100%);
  border-color: hsl(200,96%,11%);
}

.c0::-moz-focus-inner {
  border: 0;
}

.c0:focus::after {
  content: '';
  display: block;
  position: absolute;
  height: calc(100% + 10px);
  width: calc(100% + 10px);
  top: -5px;
  left: -5px;
  border: 2px solid hsl(200,96%,35%);
  border-radius: 20px;
  box-sizing: border-box;
}

.c0 svg {
  display: inline-block;
  margin-top: -4px;
}

.c0 .c1 {
  position: absolute;
  left: 50%;
  top: 50%;
  margin-left: -12px;
  margin-top: -12px;
}

.c0:hover {
  color: hsl(0,0%,100%);
  background-color: hsl(200,96%,11%);
  border-color: hsl(200,96%,11%);
}

<button
    aria-live="assertive"
    class="c0"
    type="button"
  >
    <span>
      Click me!
    </span>
  </button>
</DocumentFragment>
`;

exports[`component: Button should support margin space props 1`] = `
<DocumentFragment>
  .c0 {
  position: relative;
  border-radius: 20px;
  padding: 2px 30px;
  border: 2px solid;
  outline: none;
  cursor: pointer;
  box-sizing: border-box;
  font-size: 18px;
  line-height: 28px;
  margin-top: 32px;
  color: hsl(200,96%,11%);
  background-color: hsl(0,0%,100%);
  border-color: hsl(200,96%,11%);
}

.c0::-moz-focus-inner {
  border: 0;
}

.c0:focus::after {
  content: '';
  display: block;
  position: absolute;
  height: calc(100% + 10px);
  width: calc(100% + 10px);
  top: -5px;
  left: -5px;
  border: 2px solid hsl(200,96%,35%);
  border-radius: 20px;
  box-sizing: border-box;
}

.c0 svg {
  display: inline-block;
  margin-top: -4px;
}

.c0 .c1 {
  position: absolute;
  left: 50%;
  top: 50%;
  margin-left: -12px;
  margin-top: -12px;
}

.c0:hover {
  color: hsl(0,0%,100%);
  background-color: hsl(200,96%,11%);
  border-color: hsl(200,96%,11%);
}

<button
    aria-live="assertive"
    class="c0"
    type="button"
  >
    <span>
      I have margins!
    </span>
  </button>
</DocumentFragment>
`;
